# giterm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
.ai/: README.md  rules.md
.ai/apps/: giterm.md
.github/workflows/: update-submodule.yml
.specs/apps/giterm/: roadmap.md
docs/llm/apps/: giterm.md
docs/llm/features/: ime-log.md  ios-caret-fix-advanced.md  ios-caret-fix-impl.md  ios-caret-fix.md  korean-ime.md  server-monitor.md  ssh-connect.md  tunnel-manage.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: credential.rs  debug_log.rs  ime_log.rs  mod.rs  ssh.rs  tunnel.rs  viewport_log.rs
src-tauri/src/ssh/: client.rs  known_hosts.rs  mod.rs  session.rs  tunnel.rs  types.rs
src/app/: App.tsx
src/app/providers/: QueryProvider.tsx
src/components/layout/: Layout.tsx  Sidebar.test.tsx  Sidebar.tsx
src/components/ssh/: ConnectionDialog.tsx
src/components/terminal/: TerminalPanel.tsx
src/entities/connection/: index.ts
src/entities/session/: index.ts
src/entities/tunnel/: index.ts
src/features/ime-log/: index.ts
src/features/server-monitor/: index.ts
src/features/ssh-connect/: index.ts
src/features/ssh-reconnect/: index.ts
src/features/tunnel-manage/: index.ts
src/shared/adapters/: credentialApi.ts  sshExecApi.ts  tauriStorage.ts  viewportLogApi.ts
src/shared/config/: designTokens.ts
src/shared/lib/: constants.ts  cpuSnapshotCache.ts  escapeSequences.ts  koreanIme.ts  (+9 more)
src/stores/: app-store.ts  connection-store.test.ts  connection-store.ts  terminal-store.ts
(+58 files in other folders)
